[gd_scene load_steps=2 format=2]

[ext_resource path="res://gameplay/data_spawn/data_spawn.gd" type="Script" id=1]

[node name="data_spawn" type="Node2D"]
position = Vector2( 1994, 0 )
script = ExtResource( 1 )

[node name="top_position" type="Position2D" parent="."]
position = Vector2( 0, 32 )

[node name="bottom_position" type="Position2D" parent="."]
position = Vector2( 0, 1043 )

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[node name="data_container" type="Node2D" parent="."]

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
